.devcontainer/k3s/manifests/infra/istio.yaml
# apiVersion: helm.cattle.io/v1
# kind: HelmChart
# metadata:
#   namespace: kube-system
#   name: istio-base
# spec:
#   targetNamespace: istio-system
#   createNamespace: true
#   bootstrap: true
#   version: v1.25.0
#   chart: base
#   repo: https://istio-release.storage.googleapis.com/charts
#   valuesContent: |-
#     defaultRevision: default
---
# apiVersion: helm.cattle.io/v1
# kind: HelmChart
# metadata:
#   namespace: kube-system
#   name: istio-ingressgateway
# spec:
#   targetNamespace: istio-ingress
#   createNamespace: true
#   version: v1.25.0
#   chart: gateway
#   repo: https://istio-release.storage.googleapis.com/charts
#   valuesContent: |-
#     service:
#       type: NodePort
#       ports:
#         - name: status-port
#           nodePort: 30842
#           port: 15021
#           protocol: TCP
#           targetPort: 15021
#         - name: http2
#           nodePort: 30080
#           port: 80
#           protocol: TCP
#           targetPort: 8080
#         - name: https
#           nodePort: 30443
#           port: 443
#           protocol: TCP
#           targetPort: 8443
# ---
# apiVersion: trust.cert-manager.io/v1alpha1
# kind: Bundle
# metadata:
#   name: local-gw
# spec:
#   sources:
#   - useDefaultCAs: true
#   - secret:
#       name: local-gw
#       key: ca.crt

# ---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: local-gw
#   namespace: istio-system
# spec:
#   issuerRef:
#     group: cert-manager.io
#     kind: ClusterIssuer
#     name: local-ca-issuer
#   dnsNames:
#   - localhost
#   - "*.localhost"
#   - "0.0.0.0.nip.io"
#   - "*.0.0.0.0.nip.io"
#   - "*.*.0.0.0.0.nip.io"
#   - "*.*.*.0.0.0.0.nip.io"
#   - "*.*.*.*.0.0.0.0.nip.io"
#   secretName: local-gw
#   isCA: true
#   additionalOutputFormats:
#   - type: CombinedPEM
#   usages:
#   - server auth
  
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: local-ca-issuer
  #   networking.istio.io/service-type: NodePort
spec:
  gatewayClassName: istio
  listeners:
  - name: https
    hostname: "community.tao.internal"
    # hostname: "0.0.0.0.nip.io"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: local-gw-2
  # - name: https-wc
  #   # hostname: "*.0.0.0.0.nip.io"
  #   hostname: "*.community.tao.internal"
  #   port: 443
  #   protocol: HTTPS
  #   allowedRoutes:
  #     namespaces:
  #       from: All
  #   tls:
  #     mode: Terminate
  #     certificateRefs:
  #     - name: local-gw-2
